fixed horizontal scroll

--- a/css/index.css
+++ b/css/index.css
@@ -25,6 +25,8 @@
 }
 .row {
   flex-grow: 1;
+  margin:0 !important;
+  max-width: 100%;
 }
 
 /* only on large screen */
